@@ -1,5 +1,7 @@
 0.84 19dec2021
 * added 'model' field
+* added option log_lines to assist in new sensor detection
+* added config option to specify sensor_map for direct invocation
 
 0.83 26oct2021
 * fix hideki wind/rain identifiers
